--- a/Forms/dialogprogress.ui
+++ b/Forms/dialogprogress.ui
@@ -93,25 +93,53 @@
         <number>0</number>
        </property>
        <property name="value">
-        <number>0</number>
+        <number>-1</number>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
+       <property name="textVisible">
+        <bool>true</bool>
+       </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="invertedAppearance">
+        <bool>false</bool>
        </property>
        <property name="textDirection">
         <enum>QProgressBar::TopToBottom</enum>
        </property>
-       <property name="format">
-        <string/>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pause_start">
+       <property name="minimumSize">
+        <size>
+         <width>75</width>
+         <height>23</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>75</width>
+         <height>23</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Старт</string>
        </property>
       </widget>
      </item>
      <item alignment="Qt::AlignRight|Qt::AlignBottom">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="Cancel">
        <property name="minimumSize">
+        <size>
+         <width>75</width>
+         <height>23</height>
+        </size>
+       </property>
+       <property name="maximumSize">
         <size>
          <width>75</width>
          <height>23</height>
