--- a/Forms/MainWin.ui
+++ b/Forms/MainWin.ui
@@ -32,7 +32,7 @@
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QHBoxLayout" name="horizontalLayout" stretch="3,1">
     <item>
      <widget class="QTabWidget" name="tabs">
       <property name="enabled">
@@ -130,6 +130,22 @@
           <height>600</height>
          </size>
         </property>
+        <property name="styleSheet">
+         <string notr="true">background: rgb(181, 181, 181)</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QProgressBar" name="preview_progress">
+        <property name="maximum">
+         <number>0</number>
+        </property>
+        <property name="value">
+         <number>0</number>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
        </widget>
       </item>
       <item>
@@ -206,38 +222,6 @@
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_curr">
-          <property name="minimumSize">
-           <size>
-            <width>61</width>
-            <height>16</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>61</width>
-            <height>16</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>100000000</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>/</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item>
          <widget class="QLabel" name="label_outof">
           <property name="text">
            <string>100000000</string>
@@ -245,7 +229,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QToolButton" name="nex_color">
+         <widget class="QToolButton" name="next_color">
           <property name="minimumSize">
            <size>
             <width>25</width>
